# qt-pyside6-app

./: LICENSE  README.md  pyproject.toml
