[tool.poetry]
name = "pyside-6-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyside_6_sample"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PySide6 = "^6.4.3"

[tool.poetry.group.dev.dependencies]
PySide6 = "^6.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
